--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,12 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
+    
+    -name : Install Golang Migrate
+     run : |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-386.tar.gz | tar xvz
+        sudo mv migrate /usr/bin
+        which migrate
 
     - name: Run Migrations
       run : make migrateup
