--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -13,10 +13,9 @@ sql:
     go:
       package: db
       out: "./db/sqlc/"
+      emit_json_tags: true
+      emit_empty_slices: true
 overrides:
     go: null
 plugins: []
 rules: []
-options:
-      package: authors
-      emit_json_tags: true
